--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.8",
@@ -20,7 +22,8 @@
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
     "redux": "^4.0.3",
-    "redux-form": "^8.2.4"
+    "redux-form": "^8.2.4",
+    "validator": "^11.1.0"
   },
   "scripts": {
     "start": "node backEnd/server/server.js && react-scripts start",
